deployment/backend/api/api.service.yaml
mengtongun.commengtongun.com---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    lechaterrant.com/app: api
    lechaterrant.com/stack: backend
spec:
  type: ClusterIP
  selector:
    lechaterrant.com/app: api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
