deployment/backend/api/api.ingress.yaml
mengtongun.commengtongun.com---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-https
  labels:
    lechaterrant.com/app: api
    lechaterrant.com/stack: backend
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`api.lechaterrant.com`)
    services:
    - name: api-service
      port: 8000
  tls:
    secretName: tls-secret

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-http
  labels:
    lechaterrant.com/app: api
    lechaterrant.com/stack: backend
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`api.lechaterrant.com`) && PathPrefix(`/insecure`)
      services:
        - name: api-service
          port: 8000
      middlewares:
        - name: strip-api-prefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  labels:
    lechaterrant.com/app: api
    lechaterrant.com/stack: backend
spec:
  stripPrefix:
    prefixes:
      - /insecure
